Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-July-2012 Jean-Marie Simonet
 # [#28510] DB error "session" table Duplicate entry. Thanks Rob

05-July-2012 Jean-Marie Simonet
 # [#28770] Loss of data when editing an article through the front end. Thanks Franz

04-July-2012 Jean-Marie Simonet
 # [#28779] *JS error in page 6 of installation. Thanks Michael

03-July-2012 Jean-Marie Simonet
 # [#28741] E_STRICT: JArrayHelper::pivot should be declared as static. Thanks Christophe.
 ^ [#28776] Replace DS with DIRECTORY_SEPARATOR in com_media. Thanks Michael

30-Jun-2012 Mark Dexter
 # [#28763] Make the field for installing sample data easier to use (Elin Waring)
 # [#28751] *Copy Template Feature - language files have capital letters (Jean-Marie Simonet)
 # [#28647] Registration form: language override for "Name" label causes side effects (Johannnes S-F)
 # [#28759] Undefined property: JSite::$registeredurlparams (Rouven Weßling) 

29-Jun-2012 Jean-Marie Simonet
 # [#28713] Article Media Manager: 'This file is too large to upload' appears in a Media Manager screen
 # [#28733] administrator/mod_menu Bug! Thanks Sebastian

26-Jun-2012 Jean-Marie Simonet
 # [#28745] mailto fatal error when sending article-mail in joomla 2.5.6. Thanks Rouven.
 # [#28682] "Articles" appearing in title. Thanks Christophe
 
26-Jun-2012 Christophe Demko
 ^ [#28730] Use the MVC legacy aliases in the administrator (Rouven Weßling)

25-Jun-2012 Christophe Demko
 ^ [#28683] Replace uses of JHtml::core() (Michael Babker)
 ^ [#28736] Don't use APIs not present in Platform 12.2 (Rouven Weßling)
 # [#28690] Wrong Content Type for JSON response (Elijah Madden)
 + [#28651] Security concern: passwords should not be sent via email (Johannes S-F)