@@ -21,3 +21,5 @@ MOD_WRAPPER_FIELD_WIDTH_DESC="Width of the iFrame window. You can enter an absol
 MOD_WRAPPER_FIELD_WIDTH_LABEL="Width"
 MOD_WRAPPER_NO_IFRAMES="No Iframes"
 MOD_WRAPPER_XML_DESCRIPTION="This module shows an iFrame window to specified location."
+MOD_WRAPPER_FIELD_FRAME_LABEL="Frame border"
+MOD_WRAPPER_FIELD_FRAME_DESC="Show frame border which wraps the iframe"
